Canvas: Wire context's alpha to DispatchFrame{Sync}() and PrepareFrame()

This CL adds a parameter |is_opaque| to CanvasResourceDispatcher's
DispatchFrame{Sync}() and the private PrepareFrame(), and wires it to
the (offscreen, normal) Context's IsOpaque().

Two motivations:
- offscreen canvas should respect the opacity of the context (they
  don't do that now on ToT).
- |is_opaque| is needed when creating the viz::SharedQuadState and
  setting viz::DrawQuad::needs_blending. This quad needs to be opaque
  to promote it to underlay adequately on CrOs (and when promoted to
  overlay, we can also avoid re compositing what's below).

offscreen_canvas_test.cc and html_canvas_element_module_test.cc are
extended to test this new code: for that, Mock mojo objects are
defined in mock_viz_mojo.h, and plugged in the respective tests
so that the CompositorFrames can be inspected for opacity/transparency
(tests are parameterised to try the combinations).

Made a few vars const and a few const constexpr, removed superfluous {}.

Bug: 878801, 705019
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ice1f02adee79b13b9a3f8ae915594b71487bb963
Reviewed-on: https://chromium-review.googlesource.com/1228859
Reviewed-by: Stephen White <senorblanco@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593276}
Former-commit-id: dfcdcbcc4d89e790534df85697159dcdb211aa61