third_party/blink/renderer/modules/canvas/offscreencanvas/offscreen_canvas_test.cc
@@ -2,6 +2,8 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+#include "third_party/blink/renderer/core/offscreencanvas/offscreen_canvas.h"
+
 #include "testing/gmock/include/gmock/gmock.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "third_party/blink/public/mojom/page/page_visibility_state.mojom-blink.h"
@@ -9,43 +11,45 @@
 #include "third_party/blink/renderer/core/frame/local_frame_view.h"
 #include "third_party/blink/renderer/core/frame/settings.h"
 #include "third_party/blink/renderer/core/html/canvas/html_canvas_element.h"
-#include "third_party/blink/renderer/core/offscreencanvas/offscreen_canvas.h"
 #include "third_party/blink/renderer/core/testing/page_test_base.h"
 #include "third_party/blink/renderer/modules/canvas/htmlcanvas/html_canvas_element_module.h"
 #include "third_party/blink/renderer/modules/canvas/offscreencanvas2d/offscreen_canvas_rendering_context_2d.h"
+#include "third_party/blink/renderer/modules/canvas/test/mock_viz_mojo.h"
 #include "third_party/blink/renderer/platform/graphics/gpu/shared_gpu_context.h"
 #include "third_party/blink/renderer/platform/graphics/test/fake_gles2_interface.h"
 #include "third_party/blink/renderer/platform/graphics/test/fake_web_graphics_context_3d_provider.h"
 #include "third_party/blink/renderer/platform/testing/testing_platform_support.h"
 
-using testing::Mock;
+using ::testing::_;
+using ::testing::Combine;
+using ::testing::Values;
 
 namespace blink {
 
-class OffscreenCanvasTest : public PageTestBase {
+namespace {
+constexpr uint32_t kClientId = 2;
+constexpr uint32_t kSinkId = 1;
+}  // unnamed namespace
+
+class OffscreenCanvasTest
+    : public PageTestBase,
+      public ::testing::WithParamInterface<std::tuple<bool, bool>> {
  protected:
   OffscreenCanvasTest();
   void SetUp() override;
   void TearDown() override;
 
-  HTMLCanvasElement& CanvasElement() const { return *canvas_element_; }
-  OffscreenCanvas& OSCanvas() const { return *offscreen_canvas_; }
+  OffscreenCanvas& offscreen_canvas() const { return *offscreen_canvas_; }
   CanvasResourceDispatcher* Dispatcher() const {
     return offscreen_canvas_->GetOrCreateResourceDispatcher();
   }
-  OffscreenCanvasRenderingContext2D& Context() const { return *context_; }
   ScriptState* GetScriptState() const {
     return ToScriptStateForMainWorld(GetDocument().GetFrame());
   }
-  ScopedTestingPlatformSupport<TestingPlatformSupport>& platform() {
-    return platform_;
-  }
 
  private:
-  Persistent<HTMLCanvasElement> canvas_element_;
   Persistent<OffscreenCanvas> offscreen_canvas_;
   Persistent<OffscreenCanvasRenderingContext2D> context_;
-  ScopedTestingPlatformSupport<TestingPlatformSupport> platform_;
   FakeGLES2Interface gl_;
 };
 
@@ -62,11 +66,20 @@ void OffscreenCanvasTest::SetUp() {
       WTF::BindRepeating(factory, WTF::Unretained(&gl_)));
   PageTestBase::SetUp();
   SetHtmlInnerHTML("<body><canvas id='c'></canvas></body>");
-  canvas_element_ = ToHTMLCanvasElement(GetElementById("c"));
+  HTMLCanvasElement* canvas_element = ToHTMLCanvasElement(GetElementById("c"));
+
   DummyExceptionStateForTesting exception_state;
   offscreen_canvas_ = HTMLCanvasElementModule::transferControlToOffscreen(
-      *canvas_element_, exception_state);
+      *canvas_element, exception_state);
+  // |offscreen_canvas_| should inherit the FrameSinkId from |canvas_element|s
+  // SurfaceLayerBridge, but in tests this id is zero; fill it up by hand.
+  offscreen_canvas_->SetFrameSinkId(kClientId, kSinkId);
+
   CanvasContextCreationAttributesCore attrs;
+  if (testing::UnitTest::GetInstance()->current_test_info()->value_param()) {
+    attrs.alpha = std::get<0>(GetParam());
+    attrs.low_latency = std::get<1>(GetParam());
+  }
   context_ = static_cast<OffscreenCanvasRenderingContext2D*>(
       offscreen_canvas_->GetCanvasRenderingContext(&GetDocument(), String("2d"),
                                                    attrs));
@@ -80,5 +93,53 @@ TEST_F(OffscreenCanvasTest, AnimationNotInitiallySuspended) {
   ScriptState::Scope scope(GetScriptState());
   EXPECT_FALSE(Dispatcher()->IsAnimationSuspended());
 }
+
+// Verifies that an offscreen_canvas()s PushFrame()/Commit() has the appropriate
+// opacity/blending information sent to the CompositorFrameSink.
+TEST_P(OffscreenCanvasTest, CompositorFrameOpacity) {
+  ScopedTestingPlatformSupport<TestingPlatformSupport> platform;
+  ScriptState::Scope scope(GetScriptState());
+
+  // To intercept SubmitCompositorFrame/SubmitCompositorFrameSync messages sent
+  // by OffscreenCanvas's CanvasResourceDispatcher, we have to override the Mojo
+  // EmbeddedFrameSinkProvider interface impl and its CompositorFrameSinkClient.
+  MockEmbeddedFrameSinkProvider mock_embedded_frame_sink_provider;
+  mojo::Binding<mojom::blink::EmbeddedFrameSinkProvider>
+      embedded_frame_sink_provider_binding(&mock_embedded_frame_sink_provider);
+  auto override =
+      mock_embedded_frame_sink_provider.CreateScopedOverrideMojoInterface(
+          &embedded_frame_sink_provider_binding);
+
+  // Call here DidDraw() to simulate having drawn something before PushFrame()/
+  // Commit(); DidDraw() will in turn cause a CanvasResourceDispatcher to be
+  // created and a CreateCompositorFrameSink() to be issued.
+  EXPECT_CALL(mock_embedded_frame_sink_provider,
+              CreateCompositorFrameSink(viz::FrameSinkId(kClientId, kSinkId)));
+  offscreen_canvas().DidDraw();
+  platform->RunUntilIdle();
+
+  const bool context_alpha = std::get<0>(GetParam());
+  mock_embedded_frame_sink_provider.mock_compositor_frame_sink_
+      ->expected_opacity_ = !context_alpha;
+
+  const auto canvas_resource = CanvasResourceSharedBitmap::Create(
+      offscreen_canvas().Size(), CanvasColorParams(), nullptr /* provider */,
+      kLow_SkFilterQuality);
+  EXPECT_TRUE(!!canvas_resource);
+
+  EXPECT_CALL(*mock_embedded_frame_sink_provider.mock_compositor_frame_sink_,
+              SubmitCompositorFrameOrSubmitCompositorFrameSync());
+  offscreen_canvas().PushFrame(canvas_resource, SkIRect::MakeWH(10, 10));
+  platform->RunUntilIdle();
+
+  EXPECT_CALL(*mock_embedded_frame_sink_provider.mock_compositor_frame_sink_,
+              SubmitCompositorFrameOrSubmitCompositorFrameSync());
+  offscreen_canvas().Commit(canvas_resource, SkIRect::MakeWH(10, 10));
+  platform->RunUntilIdle();
+}
+
+INSTANTIATE_TEST_CASE_P(,
+                        OffscreenCanvasTest,
+                        Combine(Values(true, false), Values(true, false)));
 
 }  // namespace blink
