third_party/blink/renderer/platform/graphics/canvas_resource_dispatcher_test.cc
@@ -70,7 +70,8 @@ class CanvasResourceDispatcherTest : public testing::Test {
 void CanvasResourceDispatcherTest::DispatchOneFrame() {
   dispatcher_->DispatchFrame(resource_provider_->ProduceFrame(),
                              base::TimeTicks(), SkIRect::MakeEmpty(),
-                             false /* needs_vertical_flip */);
+                             false /* needs_vertical_flip */,
+                             false /* is-opaque */);
 }
 
 TEST_F(CanvasResourceDispatcherTest, PlaceholderRunsNormally) {
